[package]
name = "ingetin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.5.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }
dialoguer = "0.8"
async-recursion = "0.3"

[dev-dependencies]
rusty-hook = "^0.11"

